# cpp-workshop

./: README.md
app/: CMakeLists.txt
app/src/: main.cpp
funlib/: CMakeLists.txt
funlib/include/funlib/: funlib.h
funlib/src/: funlib.cpp
